syntax = "proto3";

// Payment payment.v1 симуляция работы платёжного шлюза
package payment.v1;

option go_package = "github.com/dfg007star/go_rocket/inventory/pkg/proto/payment/v1;payment_v1";

// PaymentService сервис оплаты заказов
service PaymentService {
  // PayOrder обрабатывает команду на оплату и возвращает transaction_uuid
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest запрос на создание оплаты
message PayOrderRequest {
  string order_uuid = 1;
  string user_uuid = 2;
  PaymentMethod payment_method = 3;
}

// PayOrderResponse отдает transaction_uuid, после успешной оплаты
message PayOrderResponse {
  string transaction_uuid = 1;
}

// PaymentMethod выбранный способ оплаты
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD = 1;
  PAYMENT_METHOD_SBP = 2;
  PAYMENT_METHOD_CREDIT_CARD = 3;
  PAYMENT_METHOD_INVESTOR_MONEY = 4;
}
